--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React Native - Learn once, write anywhere</title>
   <style>
-    /* CSS Reset */
     * {
       margin: 0;
       padding: 0;
@@ -15,6 +14,35 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #f5f5f5;
+    }
+
+    /* Navigation */
+    nav {
+      background-color: #1a1a1a;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo {
+      color: white;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    .nav-links {
+      display: flex;
+      gap: 20px;
+    }
+
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+    }
+
+    .nav-links a:hover {
+      color: #61dafb;
     }
   </style>
 </head>
