Add styles for hero section
Added styles for the hero section including background color, padding, and text alignment.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
     .nav-links a:hover {
       color: #61dafb;
     }
+
+    /* Hero Section */
+    .hero {
+      background-color: white;
+      padding: 80px 20px;
+      text-align: center;
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+      color: #333;
+    }
+
+    .hero p {
+      font-size: 20px;
+      color: #666;
+      margin-bottom: 30px;
+    }
   </style>
 </head>
 <body>
