--- a/index.html
+++ b/index.html
@@ -63,6 +63,37 @@
       color: #666;
       margin-bottom: 30px;
     }
+
+    /* Buttons */
+    .button-container {
+      display: flex;
+      gap: 15px;
+      justify-content: center;
+      margin-bottom: 40px;
+    }
+
+    button {
+      padding: 15px 30px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .btn-primary {
+      background-color: #61dafb;
+      color: black;
+    }
+
+    .btn-secondary {
+      background-color: white;
+      color: #333;
+      border: 2px solid #333;
+    }
+
+    button:hover {
+      opacity: 0.8;
+    }
   </style>
 </head>
 <body>
