Add features section styles
Added styles for features section and feature cards.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     .devices {
       display: flex;
-            justify-content: center;
+      justify-content: center;
       gap: 30px;
       margin-top: 40px;
     }
@@ -168,6 +168,47 @@
       border-radius: 30px;
       border: 10px solid #333;
       margin: 0 auto;
+    }
+
+    /* Features Section */
+    .features {
+      background-color: white;
+      padding: 80px 20px;
+      text-align: center;
+    }
+
+    .features h2 {
+      font-size: 36px;
+      margin-bottom: 50px;
+      color: #333;
+    }
+
+    .feature-cards {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    .card {
+      flex: 1;
+      background-color: #f9f9f9;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+
+    .card h3 {
+      font-size: 24px;
+      margin-bottom: 15px;
+      color: #333;
+    }
+
+    .card p {
+      font-size: 16px;
+      color: #666;
+      line-height: 1.5;
     }
   </style>
 </head>
