Add footer section with styles
Added footer styles and markup to the HTML file.

--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
       color: #666;
       line-height: 1.5;
     }
+
+    /* Footer */
+    footer {
+      background-color: #1a1a1a;
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+    }
   </style>
 </head>
 <body>
