Add images to icon boxes

--- a/index.html
+++ b/index.html
@@ -391,21 +391,31 @@
     }
 
     .icon-box {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: 86px;
       height: 86px;
       background-color: #f0f0f0;
       border-radius: 14px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+      overflow: hidden;
+    }
+
+    .icon-box img {
       display: flex;
       align-items: center;
       justify-content: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+      width: 68px;
+      height: 68px;
+      object-fit: contain;
     }
 
     .parallel-bar {
       width: 2px;
       min-width: 2px;
-      height: 320px;
-      background: linear-gradient(180deg, #d0d0d0 70%, transparent);
+      height: 650px;
+      background: #dcdde6;
       margin: 0 24px;
       align-self: stretch;
     }
@@ -631,31 +641,81 @@
       <div class="icon-container">
         <p>React Native is being used in thousands of apps, but it's likely you've already used it in one of these apps:</p>
         <div class="icon-grid">
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
-          <div class="icon-box"></div>
+          <div class="icon-box">
+            <img src="./icons/facebook.webp" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/adsmanager.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/metahorizon.webp" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/messengerdesktop.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/officemobile.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/outlookmobile.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/teamsmobile.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/xboxgamepass.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/amazon-shopping.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/shopify.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/shop.webp" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/coinbase.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/puma.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/playstation.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/wordpress.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/tableau.webp" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/flipkart.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/mercari.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/discord.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/bloomberg.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/tesla.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/bolt.png" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/mattermost.webp" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/klarna.jpg" alt="Icon" />
+          </div>
+          <div class="icon-box">
+            <img src="./icons/nfl.webp" alt="Icon" />
+          </div>
         </div>
         <p style="margin-top: 14px;">and <a href="#">many more.</a></p>
       </div>
